--- a/style.css
+++ b/style.css
@@ -63,11 +63,15 @@
     scroll-behavior: smooth;
 }
 
+body {
+    background-color: #333333;
+}
+
 /* ===================== Header ===================== */
 header {
-    background-color: #162783;
+    background-color: #ff0000;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     position: fixed;
     top: 0;
@@ -79,10 +83,10 @@ header {
     cursor: pointer;
     margin: 12px 24px;
     padding: 8px 16px;
-    background-color: white;
-    color: #162783;
+    background-color: #fff200;
+    color: #ff0000;
     font-size: 2em;
-    border-radius: 50%;
+    border-radius: 20px;
 }
 
 .nav-bar-items {
@@ -100,7 +104,7 @@ header {
 
 a {
     text-decoration: none;
-    color: white;
+    color: #fff200;
 }
 
 /* ================= Profil ================== */
@@ -113,33 +117,34 @@ a {
 
 #profile-container {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
-    padding-top: 140px;
+    padding-top: 200px;
     margin: 0 1.5%;
 }
 
 #profile-picture {
     height: 300px;
     object-fit: cover;
-    border-radius: 50%;
+    border-radius: 20px;
 }
 
 .title-1 {
     margin: 24px 0px;
     font-size: 2.5em;
     font-weight: 700;
-    color: #162783;
+    color: #ff0000;
 }
 
 .subtitle {
     font-size: 1.25em;
     line-height: 1.4;
     margin: 24px 0;
+    color: #fff200;
 }
 
 #bio {
-    margin-left: 96px;
+    margin-left: 50px;
 }
 
 .social-media-container a {
@@ -147,19 +152,22 @@ a {
 }
 
 hr {
-    margin: 32px 1.5%;
+    margin: 15px 15%;
+    width: 70%;
 }
+
 
 /* ================= Portofolio ===================== */
 .portfolio-card {
-    width: 97%;
+    width: 70%;
+    height: auto;
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    margin: 16px 1.5%;
-    background-color: white;
+    justify-content: space-around;
+    margin: 16px 15%;
+    background-color: #fff200;
     border-radius: 16px;
-    box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.3);
+    box-shadow: 0px 0px 10px 0px rgba(247, 222, 0, 0.5);
 }
 
 .portfolio-picture {
@@ -177,29 +185,28 @@ hr {
 
 .title-2 {
     padding-top: 96px;
-    margin-left: 1.5%;
+    margin-left: 15%;
     font-size: 1.5em;
-    color: #162783;
+    color: #ff0000;
     font-weight: 700;
     text-transform: uppercase;
 }
 
 .title-3 {
-    color: #162783;
+    color: #ff0000;
     margin: 16px 0px;
     font-size: 1.25em;
     font-weight: 700;
 }
 
-.description {
-    line-height: 1.5;
-}
 
 /* ================= Keterampilan ===================== */
 .skill-container {
     display: flex;
     flex-wrap: wrap;
     margin-bottom: 24px;
+    width: 70%;
+    margin: 16px 15%;
 }
 
 .skill-card {
@@ -221,33 +228,28 @@ hr {
     margin-bottom: 16px;
     text-align: center;
     font-weight: 700;
-    color: #162783;
+    color: #ff0000;
 }
 
 /* ================= Pengalaman ===================== */
 .experience-card {
     background-color: gray;
-    margin: 32px 1.5%;
+    margin: 32px 15%;
     padding: 16px;
     background-color: white;
     border-radius: 16px;
     box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.3);
 }
 
-.title-3 {
-    color: #162783;
-    margin: 16px 0px;
-    font-size: 1.25em;
-    font-weight: 700;
-}
-
 .title-4 {
     font-size: 1em;
     margin: 8px 0px;
+    color: #333333;
 }
 
 .description {
     line-height: 1.5;
+    color: #333333;
 }
 
 /* ================= Pendidikan ===================== */
@@ -259,7 +261,7 @@ hr {
 
 .education-card {
     flex: 0 1 30%;
-    margin: 16px 1.5%;
+    margin: 16px 15%;
     padding: 16px 16px;
     background-color: white;
     border-radius: 10px;
@@ -276,7 +278,7 @@ hr {
 footer {
     text-align: center;
     padding: 32px;
-    background-color: #162783;
-    color: white;
+    background-color: #ff0000;
+    color: #fff200;
 }
    
