--- a/style.css
+++ b/style.css
@@ -1,57 +1,62 @@
 @media screen and (max-width: 700px) {
     .content {
-    background-color: blue;
-    }
-}
+        background-color: #333333;
+        padding: 0px;
+        }
 
-@media screen and (max-width: 700px) {
     header {
-    position: static;
-    flex-direction: column;
-    }
-    .nav-bar-items {
-    flex-direction: column;
-    text-align: center;
-    }
-}
- 
-@media screen and (max-width: 700px) {
+            flex-direction: column; 
+            padding: 0px;
+            border-radius: 10px;
+            position: static;
+        }
+        .nav-bar-items {
+            flex-direction: column;
+            display: block;
+            padding: 0px;
+        }
+
     #profile-container {
-    padding-top: 32px;
-    flex-direction: column;
+        padding-top: 32px;
+        flex-direction: column;
     }
     #bio {
-    margin: 16px;
-    padding: 16px 0;
+        margin: 16px;
+        padding: 16px 0;
     }
-}
 
-@media screen and (max-width: 700px) {
     .portfolio-card {
-    flex-direction: column;
-    align-items: flex-start;
+        flex-direction: column;
+        align-items: flex-start;
+        }
+
+        .portfolio-card div {
+            width: 100%;
+            margin: 16px;
+        }
+
+        .portfolio-picture {
+            /* width: 100%;
+            height: auto; */
+            max-width: 100%;
+        }
+
+    .education-card {
+        flex: 0 1 100%;
     }
-    .portfolio-card div {
-    width: 100%;
-    margin: 16px;
-    }
-    .portfolio-picture {
-    width: 100%;
-    height: auto;
-    }
-}
+    
+}    
 
 @media screen and (max-width: 550px) {
     .skill-card {
     flex: 0 1 47%;
     }
+
+    .education-card {
+        flex: 0 1 97%;
+        }
 }
 
-@media screen and (max-width: 550px) {
-    .education-card {
-    flex: 0 1 97%;
-    }
-}
    
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
@@ -73,7 +78,7 @@ header {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    position: fixed;
+    /* position: fixed; */
     top: 0;
     width: 100%;
 }
@@ -95,7 +100,7 @@ header {
 }
 
 .nav-bar li {
-    padding: 16px 32px;
+    padding: 16px 10px;
 }
 
 .nav-bar-items li a {
@@ -105,6 +110,12 @@ header {
 a {
     text-decoration: none;
     color: #fff200;
+}
+
+.nav-bar a:hover {
+    background-color: #333333;
+    padding: 10px;
+    border-radius: 15px;
 }
 
 /* ================= Profil ================== */
@@ -119,7 +130,7 @@ a {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    padding-top: 200px;
+    padding-top: 120px;
     margin: 0 1.5%;
 }
 
@@ -151,9 +162,15 @@ a {
     margin-right: 16px;
 }
 
+.icon {
+    width: 50px;
+    height: auto;
+}
+
 hr {
     margin: 15px 15%;
     width: 70%;
+    margin-bottom: 138px;
 }
 
 
@@ -172,9 +189,12 @@ hr {
 
 .portfolio-picture {
     height: 250px;
-    width: 40%;
+    /* width: 40%; */
     border-radius: 16px;
     object-fit: cover;
+    /* max-width: 50%; */
+    display: block;
+    /* display: flex; */
 }
 
 .portfolio-card div {
@@ -183,8 +203,9 @@ hr {
     margin-right: 16px;
 }
 
+
 .title-2 {
-    padding-top: 96px;
+    padding-top: 30px;
     margin-left: 15%;
     font-size: 1.5em;
     color: #ff0000;
@@ -210,11 +231,12 @@ hr {
 }
 
 .skill-card {
-    flex: 0 1 22%;
+    /* flex: 0 1 22%; */
     background-color: white;
     margin: 16px 1.5%;
     border-radius: 16px;
     box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.3);
+    width: 22%;
 }
 
 .skill-picture {
@@ -260,7 +282,7 @@ hr {
 }
 
 .education-card {
-    flex: 0 1 30%;
+    /* flex: 0 1 35%; */
     margin: 16px 15%;
     padding: 16px 16px;
     background-color: white;
