--- a/style.css
+++ b/style.css
@@ -18,32 +18,7 @@
             display: block;
             padding: 0px;
         }
-
-    /*  ============home di tengah merata================ */
-            .home-around-portofolio {
-                padding-right: 150px;
-                padding-left: 150px;
-            }
-            .home-around-skill {
-                padding-right: 140px;
-                padding-left: 140px;
-            }
-            /* .home-around-skill2 {
-                padding-right: 140px;
-                padding-left: 140px;
-            } */
-            .home-around-work {
-                padding-right: 150px;
-                padding-left: 150px;
-            }
-            .home-around-work2 {
-                padding-right: 170px;
-                padding-left: 170px;
-            }
-            .home-around-work3 {
-                padding-right: 170px;
-                padding-left: 170px;
-            }
+    
 
     #profile-container {
         padding-top: 32px;
@@ -87,7 +62,7 @@
 
     .education-card {
         flex: 0 1 97%;
-        }
+    }
 }
 
    
@@ -117,99 +92,20 @@ header {
 }
 
 /*  ============home di tengah merata================ */
-.home-around-portofolio {
+.home-around {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     flex-direction: row;
     flex-wrap: wrap;
     align-content: center;
-    margin: 0px -150px 0px -150px;
+    /* margin: 0px -150px 0px -150px; */
+    /* padding:  0px 220px 0px 220px; */
+    width: 68%;
+    margin: 15px 16%;
 }
 
-.home-around-portofolio a:hover {
-    background-color: #ff0000;
-    padding: 8px 16px;
-    border-radius: 20px;
-}
-
-.home-around-skill {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-content: center;
-    margin: 0px -90px 0px -90px;
-}
-
-.home-around-skill a:hover {
-    background-color: #ff0000;
-    padding: 8px 16px;
-    border-radius: 20px;
-}
-
-.home-around-skill2 {
-    /* display: flex;
-    justify-content: space-around;
-    align-items: center;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-content: center; */
-    /* margin: 0px -60px 0px -60px; */
-    padding-top: 30px;
-    margin-left: 17%;
-}
-
-/* .home-around-skill2 a:hover {
-    background-color: #ff0000;
-    padding: 8px 16px;
-    border-radius: 20px;
-} */
-
-.home-around-work {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-content: center;
-    margin: 0px -110px 0px -110px;
-}
-
-.home-around-work a:hover {
-    background-color: #ff0000;
-    padding: 8px 16px;
-    border-radius: 20px;
-}
-
-.home-around-work2 {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-content: center;
-    margin: 0px -160px 0px -160px;
-}
-
-.home-around-work2 a:hover {
-    background-color: #ff0000;
-    padding: 8px 16px;
-    border-radius: 20px;
-}
-
-.home-around-work3 {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-content: center;
-    margin: 0px -100px 0px -100px;
-}
-
-.home-around-work3 a:hover {
+.home-around a:hover {
     background-color: #ff0000;
     padding: 8px 16px;
     border-radius: 20px;
@@ -476,7 +372,7 @@ hr {
 footer {
     text-align: center;
     padding: 32px;
-    background-color: #ff0000;
+    /* background-color: #ff0000; */
     color: #fff200;
 }
    
